# rust-juniper-graphql-diesel-rocket-example

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml  docker-compose.example.yml  rustfmt.toml
migrations/2019-12-16-205230_create-startwars/: down.sql  up.sql
src/: app.rs  main.rs
src/db/: mod.rs  schema.patch  schema.rs
src/db/enums/: episode.rs  mod.rs
src/db/models/: hero.rs  mod.rs
src/graphql/: context.rs  mod.rs
src/graphql/schema/: hero.rs  mod.rs  mutation.rs  query.rs
